--- a/.gitconfig
+++ b/.gitconfig
@@ -6,6 +6,7 @@
     ci = commit
     di = diff --color
     ll = log --stat --pretty
+    lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 [core]
     quotepath = false
     excludesfile = /Users/greg/.gitignore_global
