--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ set-option -g status-right "#(~/.dotfiles/tmux-powerline/powerline.sh right)"
 set-option -g repeat-time 200
 set-option -sg escape-time 1
 
-#set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]⮀"
+set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]⮀"
 
 set -g default-terminal "screen-256color"
 
