--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "prezto"]
 	path = prezto
-	url = https://github.com/sorin-ionescu/prezto.git
+	url = git@github.com:gregarmer/prezto.git
 [submodule "tmux-powerline"]
 	path = tmux-powerline
 	url = git://github.com/erikw/tmux-powerline.git
